# pychop

./: .gitignore  PyChop.py  README.md  index.html  pyproject.toml
.github/workflows/: tests.yaml
PyChop/: Chop.py  Instruments.py  MulpyRep.py  PyChopGui.py  __main__.py  cncs.yaml  maps.yaml  mari.yaml  merlin.yaml
tests/: PyChopTest.py
unstable/: index.html
webapp/: README.md  index.html  main.js  pychop.css  pychop.js
